--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,8 @@
     <title>user registration</title>
     <link href="css/style.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
+
+
   </head>
   <body>
 
@@ -29,6 +31,8 @@
    <script src="js/services/getusersService.js"></script>
    <script src="js/services/profileService.js"></script>
    <script src="js/services/manageusersService.js"></script>
+   <script src="js/jquery.min.js"></script>
+   <script src="js/bootstrap.min.js"></script>
 
 
 
